--- a/install/helm-chart/templates/charlescd-compass-deployment.yaml
+++ b/install/helm-chart/templates/charlescd-compass-deployment.yaml
@@ -76,7 +76,7 @@ spec:
           - name: {{ $var.name | upper}}
             value: {{ $var.value | quote}}
           {{ end }}
-          {{ range $i, $var := .Values.secretEnvVars -}}
+          {{ range $i, $var := .Values.compass.secretEnvVars -}}
           - name: {{ $var.name | upper }}
             valueFrom:
               secretKeyRef:
