--- a/install/helm-chart/charts/envoy/templates/envoy-deployment.yml
+++ b/install/helm-chart/charts/envoy/templates/envoy-deployment.yml
@@ -11,6 +11,8 @@ spec:
   replicas: 1
   template: 
     metadata:
+      annotations:
+        sidecar.istio.io/inject: 'true' 
       labels:
         app: envoy-proxy     
     spec:
