--- a/install/helm-chart/templates/ingress.yaml
+++ b/install/helm-chart/templates/ingress.yaml
@@ -4,7 +4,7 @@ kind: Ingress
 metadata:
   annotations:
     kubernetes.io/ingress.class: {{ .Values.ingress.class }}
-    {{ if .Values.nginx_ingress_controller.enabled }}
+    {{ if eq .Values.ingress.class "nginx" }}
     nginx.ingress.kubernetes.io/rewrite-target: /$1
     {{- end}}
   name: charlescd-ingress
