--- a/butler/package.json
+++ b/butler/package.json
@@ -62,15 +62,15 @@
     "@typescript-eslint/parser": "^3.0.2",
     "eslint": "^7.1.0",
     "hpropagate": "0.0.6",
-    "jest": "^25.5.4",
+    "jest": "26.6.3",
     "jest-html-reporters": "^2.0.1",
     "prettier": "^1.19.1",
     "supertest": "4.0.2",
-    "ts-jest": "^25.5.1",
+    "ts-jest": "26.4.4",
     "ts-node": "8.1.0",
     "tsc-watch": "2.2.1",
     "tsconfig-paths": "3.8.0",
-    "typescript": "3.8"
+    "typescript": "4.1"
   },
   "jest": {
     "collectCoverageFrom": [
