--- a/.github/workflows/charlescd-prerelease.yml
+++ b/.github/workflows/charlescd-prerelease.yml
@@ -231,6 +231,101 @@ jobs:
         tag_with_ref: false
         tag_with_sha: false
 
+  build_and_push_release_compass:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    - name: Get the version
+      id: get_version
+      run: echo ::set-output name=VERSION::$(echo $GITHUB_REF | cut -d / -f 3)
+
+    - uses: actions/cache@v2
+      with:
+        path: ~/go/pkg/mod
+        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+        restore-keys: |
+          ${{ runner.os }}-go-
+    - uses: actions/setup-go@v2
+      with:
+        go-version: '^1.14.2'
+
+    - name: Build and push Docker images
+      uses: docker/build-push-action@v1.0.1
+      with:
+        path: ./compass
+        username: ${{secrets.DOCKERHUB_USERNAME}}
+        password: ${{secrets.DOCKERHUB_PASSWORD}}
+        repository: zupcharles/charlescd-compass
+        dockerfile: ./compass/Dockerfile
+        tags: latest,${{ steps.get_version.outputs.VERSION }}
+        tag_with_ref: false
+        tag_with_sha: false
+
+  build_and_push_release_matcher_s3_sync:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+      
+    - name: Get the version
+      id: get_version
+      run: echo ::set-output name=VERSION::$(echo $GITHUB_REF | cut -d / -f 3)
+
+    - uses: actions/cache@v1
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
+          
+    - name: Use Node.js 12.x
+      uses: actions/setup-node@v1
+      with:
+        node-version: 12.x
+
+    - run: npm ci
+      working-directory: ./utils/matcher-s3-sync
+      
+    - run: npm run build --if-present
+      working-directory: ./utils/matcher-s3-sync
+      env:
+        CI: true
+
+    - name: Build and push Docker images
+      uses: docker/build-push-action@v1.0.1
+      with:
+        path: ./utils/matcher-s3-sync
+        username: ${{secrets.DOCKERHUB_USERNAME}}
+        password: ${{secrets.DOCKERHUB_PASSWORD}}
+        repository: zupcharles/matcher-s3-sync
+        dockerfile: ./utils/matcher-s3-sync/Dockerfile
+        tags: latest,${{ steps.get_version.outputs.VERSION }}
+        tag_with_ref: false
+        tag_with_sha: false
+  
+  build_and_push_release_keycloak:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: QEMU
+      uses: docker/setup-qemu-action@v1
+
+    - name: Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Build and push Docker images
+      uses: docker/build-push-action@v1.0.1
+      with:
+        path: ./keycloak
+        username: ${{secrets.DOCKERHUB_USERNAME}}
+        password: ${{secrets.DOCKERHUB_PASSWORD}}
+        repository: zupcharles/charlescd-keycloak
+        dockerfile: ./keycloak/Dockerfile
+        tags: latest,${{ steps.get_version.outputs.VERSION }}
+        tag_with_ref: false
+        tag_with_sha: false
+
   deploy:
     runs-on: ubuntu-latest
     needs: [ build_and_push_release_butler, 
@@ -238,7 +333,8 @@ jobs:
              build_and_push_release_moove, 
              build_and_push_release_octopipe, 
              build_and_push_release_ui, 
-             build_and_push_release_villager
+             build_and_push_release_villager,
+             build_and_push_release_compass
     ]
     steps:
     - uses: actions/checkout@v2
@@ -290,20 +386,15 @@ jobs:
 
     - name: Zup Settings dev
       run: |
-        git checkout .
-        sed -i -E "s/(http:\/\/charles\.info\.example)/https:\/\/${{ secrets.HOST_DEV }}/" ./install/helm-chart/values.yaml &&
-        sed -i -E "s/(charlescd-postgresql)/${{ secrets.PG_HOST_DEV }}/" ./install/helm-chart/values.yaml &&
-        sed -i -E "/name: DB_USER/N;s/(name: DB_USER.*value: \")(keycloak\")/\1charlesadmin\"/" ./install/helm-chart/values.yaml &&
-        sed -i -E "s/DCWYW66Mq2ca6w8u/firstpassword/" ./install/helm-chart/values.yaml &&
-        sed -i -E "/postgresql:/N;s/(postgresql:.*enabled: )(true)/\1false/" ./install/helm-chart/values.yaml &&
-        sed -i -E "/nginx:/N;s/(nginx:.*enabled: )(true)/\1false/" ./install/helm-chart/values.yaml &&
-        sed -i -E "s/name: charlescd_(.*)/name: charlescd\1/" ./install/helm-chart/values.yaml &&
-        sed -i -E "s/user: charlescd_(.*)/user: charlesadmin/" ./install/helm-chart/values.yaml &&
-        sed -i -E "s/password: (.*)/password: firstpassword/" ./install/helm-chart/values.yaml &&
-        sed -i -E "/redis:/{N;N;N;s/firstpassword/hb2Fj9MGKjBkZ6zV/}" ./install/helm-chart/values.yaml
+        cat <<-EOF > values-charles-dev.yaml
+        ${{ secrets.VALUES_CHARLES_DEV }}
+        EOF
+        cat <<-EOF > ./install/helm-chart/templates/nginx-cert.yaml
+        ${{ secrets.NGINX_CERT }}
+        EOF
 
     - name: Deploy dev
       uses: WyriHaximus/github-action-helm3@v1.0.0
       with:
-        exec: helm upgrade charlescd ./install/helm-chart/ --install --wait --atomic --values=./install/helm-chart/values.yaml
+        exec: helm upgrade charlescd ./install/helm-chart/ --install --wait --atomic --values=./values-charles-dev.yaml
         kubeconfig: '${{ secrets.KUBECONFIG_DEV }}'
