--- a/.github/workflows/charlescd-prodrelease.yml
+++ b/.github/workflows/charlescd-prodrelease.yml
@@ -331,6 +331,11 @@ jobs:
         cat ./install/helm-chart/Chart.yaml &&
         sed -i -E "s/(zupcharles\/.*:)(.*)/\1${{ steps.get_version.outputs.VERSION }}/" ./install/helm-chart/values.yaml
 
+    - name: Update helm dependencies
+      uses: WyriHaximus/github-action-helm3@v1.0.0
+      with:
+        exec: helm dependency update ./install/helm-chart
+
     - name: Generate single file
       uses: WyriHaximus/github-action-helm3@v1.0.0
       with:
