--- a/install/helm-chart/templates/charlescd-moove-deployment.yaml
+++ b/install/helm-chart/templates/charlescd-moove-deployment.yaml
@@ -69,11 +69,11 @@ spec:
             - name: KEYCLOAK_CLIENT_ID
               value: "realm-charlescd"
             - name: RATELIMIT_CAPACITY
-              value: 4
+              value: "4"
             - name: RATELIMIT_TOKENS
-              value: 4
+              value: "4"
             - name: RATELIMIT_SECONDS
-              value: 1
+              value: "1"
             - name: KEYCLOAK_CLIENT_SECRET
               value: "a79e9316-2196-41d1-8dfe-98cc48241fe3"
             - name: INTERNAL_IDM_ENABLED
