--- a/circle-matcher/pom.xml
+++ b/circle-matcher/pom.xml
@@ -41,6 +41,7 @@
         <jedis.version>3.2.0</jedis.version>
         <checkstyle-maven-plugin.version>3.1.1</checkstyle-maven-plugin.version>
         <jacoco.version>0.8.4</jacoco.version>
+        <graalvm.version>20.3.0</graalvm.version>
     </properties>
 
     <dependencies>
@@ -71,6 +72,22 @@
             <groupId>com.github.dpaukov</groupId>
             <artifactId>combinatoricslib3</artifactId>
             <version>${combinatorics.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.graalvm.sdk</groupId>
+            <artifactId>graal-sdk</artifactId>
+            <version>${graalvm.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.graalvm.js</groupId>
+            <artifactId>js</artifactId>
+            <version>${graalvm.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.graalvm.js</groupId>
+            <artifactId>js-scriptengine</artifactId>
+            <version>${graalvm.version}</version>
         </dependency>
 
         <dependency>
