--- a/.github/workflows/circle-matcher-ci.yml
+++ b/.github/workflows/circle-matcher-ci.yml
@@ -18,10 +18,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 1.11
-      uses: actions/setup-java@v1
+    - name: Set up GraalVM
+      uses: rinx/setup-graalvm-ce@v0.0.5
       with:
-        java-version: 1.11
+          graalvm-version: "20.3.0"
+          java-version: "java11"
     - uses: actions/cache@v1
       with:
         path: ~/.m2/repository
