--- a/.github/workflows/circle-matcher-ci.yml
+++ b/.github/workflows/circle-matcher-ci.yml
@@ -30,7 +30,7 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-maven-
     - name: Build with Maven
-      run: mvn -B clean install
+      run: mvn -B clean install -Djfr.unsupported.vm=true
       working-directory: ./circle-matcher
     - name: Tests coverage
       uses: codecov/codecov-action@v1.0.13
