--- a/.github/workflows/circle-matcher-devrelease.yml
+++ b/.github/workflows/circle-matcher-devrelease.yml
@@ -9,12 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-      
-    - name: Set up JDK 1.11
-      uses: actions/setup-java@v1
+    - name: Set up GraalVM
+      uses: DeLaGuardo/setup-graalvm@master
       with:
-        java-version: 1.11
-
+        graalvm-version: "20.3.0.java11"
     - uses: actions/cache@v1
       with:
         path: ~/.m2/repository
@@ -24,7 +22,7 @@ jobs:
           
     - name: Build with Maven
       working-directory: ./circle-matcher
-      run: mvn -B clean install
+      run: mvn -B clean install -Djfr.unsupported.vm=true
 
     - name: Get the version
       id: get_version
