add namespace variable on chart
Signed-off-by: Cassio Godinho <cassiopgodinho@gmail.com>

--- a/install/helm-chart/charts/metacontroller/templates/metacontroller-rbac.yaml
+++ b/install/helm-chart/charts/metacontroller/templates/metacontroller-rbac.yaml
@@ -23,7 +23,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: metacontroller
-  namespace: metacontroller
+  namespace: {{ .Release.Namespace }}
 roleRef:
   kind: ClusterRole
   name: metacontroller
