--- a/.github/workflows/hermes-ci.yml
+++ b/.github/workflows/hermes-ci.yml
@@ -2,13 +2,13 @@ name: build hermes
 
 on:
   push:
-    branches: [hermes-alpha]
+    branches: [master]
     paths:
       - "hermes/**"
     tags:
       - "!*"
   pull_request:
-    branches: [hermes-alpha]
+    branches: [master]
     types: [opened, synchronize, reopened, ready_for_review]
     paths:
       - "hermes/**"
@@ -27,18 +27,15 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-go-
 
-      - uses: actions/setup-go@v2
+      - name: Set up Go
+        uses: actions/setup-go@v2
         with:
           go-version: "^1.14.2"
-
-      - name: Up Docker tests
-        working-directory: ./hermes
-        run: make tests-dep-up
 
       - name: Run Unit tests
         working-directory: ./hermes
         run: |
-          go test -v -coverpkg ./internal/action,./internal/datasource,./internal/dispatcher,./internal/health,./internal/metric,./internal/metricsgroup,./internal/metricsgroupaction,./internal/moove,./internal/plugin ./internal/tests/ -coverprofile=coverage.cov
+          go test -v -coverpkg ./internal/* -coverprofile=coverage.cov
 
       - name: Tests coverage
         uses: codecov/codecov-action@v1.0.13
