--- a/moove/web/src/main/resources/application-local.properties
+++ b/moove/web/src/main/resources/application-local.properties
@@ -16,6 +16,7 @@ charlescd.matcher.url=http://localhost:8883
 charlescd.matcher.path=/segmentation
 prometheus.url=http://localhost:9090
 charlescd.compass.url=http://localhost:8090
+charlescd.hermes.url=http://localhost:8883
 
 charlescd.keycloak.realm=charlescd
 charlescd.keycloak.serverUrl=https://charlescd-moove.com/auth
