Changing master to main
Signed-off-by: ricardorames <ricardo.basilio@zup.com.br>

--- a/.github/workflows/charlescd-prerelease.yml
+++ b/.github/workflows/charlescd-prerelease.yml
@@ -4,7 +4,7 @@ on:
   release:
     types:
       - prereleased
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   build_and_push_release_butler:
@@ -243,7 +243,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
-        ref: master
+        ref: main
 
     - name: Get the version
       id: get_version
