--- a/.github/workflows/butler-ci.yml
+++ b/.github/workflows/butler-ci.yml
@@ -5,13 +5,13 @@ name: build butler
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
     paths:
       - 'butler/**'
     tags:
       - '!*'
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
     types: [opened, synchronize, reopened, ready_for_review]
     paths:
       - 'butler/**'
@@ -31,7 +31,7 @@ jobs:
           ${{ runner.os }}-node-
 
     - name: Setup timezone
-      uses: zcong1993/setup-timezone@master
+      uses: zcong1993/setup-timezone@main
       with:
         timezone: America/Sao_Paulo
 
