--- a/.github/workflows/circle-matcher-ci.yml
+++ b/.github/workflows/circle-matcher-ci.yml
@@ -2,13 +2,13 @@ name: build circle-matcher
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
     paths:
       - 'circle-matcher/**'
     tags: 
       - '!*'
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
     types: [opened, synchronize, reopened, ready_for_review]
     paths:
       - 'circle-matcher/**'
