--- a/.github/workflows/ui-ci.yml
+++ b/.github/workflows/ui-ci.yml
@@ -2,13 +2,13 @@ name: build and test new ui
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
     paths:
       - 'ui/**'
     tags: 
       - '!*'
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
     types: [opened, synchronize, reopened, ready_for_review]
     paths:
       - 'ui/**'
