fix witch craft
Signed-off-by: bCatanant <bruno.catanant@zup.com.br>

--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -13,7 +13,7 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
-    "forceConsistentCasingInFileNames": false,
+    "forceConsistentCasingInFileNames": true,
     "module": "esnext",
     "moduleResolution": "node",
     "strictNullChecks": false,
