--- a/ui/package.json
+++ b/ui/package.json
@@ -38,7 +38,8 @@
       "react-app/jest"
     ],
     "rules": {
-      "import/no-anonymous-default-export": "off"
+      "import/no-anonymous-default-export": "off",
+      "react/jsx-pascal-case": 0
     }
   },
   "jest": {
