change update strategy of crd children
Signed-off-by: Cassio Godinho <cassiopgodinho@gmail.com>

--- a/install/helm-chart/charts/metacontroller/templates/metacontroller.yaml
+++ b/install/helm-chart/charts/metacontroller/templates/metacontroller.yaml
@@ -40,11 +40,11 @@ spec:
   - apiVersion: v1
     resource: services
     updateStrategy:
-      method: Recreate
+      method: InPlace
   - apiVersion: apps/v1
     resource: deployments
     updateStrategy:
-      method: Recreate
+      method: InPlace
   hooks:
     sync:
       webhook:
