--- a/.github/workflows/hermes-ci.yml
+++ b/.github/workflows/hermes-ci.yml
@@ -2,13 +2,13 @@ name: build hermes
 
 on:
   push:
-    branches: [master]
+    branches: [main]
     paths:
       - "hermes/**"
     tags:
       - "!*"
   pull_request:
-    branches: [master]
+    branches: [main]
     types: [opened, synchronize, reopened, ready_for_review]
     paths:
       - "hermes/**"
@@ -30,7 +30,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: "^1.14.2"
+          go-version: "1.15"
 
       - name: Run Unit tests
         working-directory: ./hermes
