--- a/install/helm-chart/requirements.yaml
+++ b/install/helm-chart/requirements.yaml
@@ -18,3 +18,6 @@ dependencies:
   version: "3.15.2"
   repository: "https://kubernetes.github.io/ingress-nginx"
   condition: nginx_ingress_controller.enabled
+- name: rabbitmq
+  version: "3.8.11"
+  condition: rabbitmq.enabled
