--- a/.github/workflows/hermes-ci.yml
+++ b/.github/workflows/hermes-ci.yml
@@ -8,7 +8,7 @@ on:
     tags:
       - "!*"
   pull_request:
-    branches: [webhook, main]
+    branches: [feature/weebhook, main]
     types: [opened, synchronize, reopened, ready_for_review]
     paths:
       - "hermes/**"
