update health check urls
Signed-off-by: pedroborgeszup <pedro.borges@zup.com.br>

--- a/install/helm-chart/templates/charlescd-hermes-deployment.yaml
+++ b/install/helm-chart/templates/charlescd-hermes-deployment.yaml
@@ -33,7 +33,7 @@ spec:
           livenessProbe:
             failureThreshold: 3
             httpGet:
-              path: /actuator/health
+              path: /health
               port: 8080
               scheme: HTTP
             initialDelaySeconds: 120
@@ -43,7 +43,7 @@ spec:
           readinessProbe:
             failureThreshold: 3
             httpGet:
-              path: /actuator/health
+              path: /health
               port: 8080
               scheme: HTTP  
             initialDelaySeconds: 120
