--- a/install/helm-chart/charts/metacontroller/templates/metacontroller.yaml
+++ b/install/helm-chart/charts/metacontroller/templates/metacontroller.yaml
@@ -67,6 +67,10 @@ spec:
     resource: virtualservices
     updateStrategy:
       method: InPlace
+  - apiVersion: networking.istio.io/v1beta1
+    resource: destinationrules
+    updateStrategy:
+      method: InPlace
   hooks:
     sync:
       webhook:
