changing hermes secrets value
Signed-off-by: pedroborgeszup <pedro.borges@zup.com.br>

--- a/install/helm-chart/templates/charlescd-hermes-secret.yaml
+++ b/install/helm-chart/templates/charlescd-hermes-secret.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.compass.enabled }}
+{{- if .Values.hermes.enabled }}
 apiVersion: v1
 data:
   encryption-key: Yjg0NDVkMDUtMzliOC00YTkxLWEwOWMtZDRhN2VkOGRlZmRj
