--- a/.github/workflows/charlescd-prodrelease.yml
+++ b/.github/workflows/charlescd-prodrelease.yml
@@ -52,26 +52,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-      
-    - name: Get the version
-      id: get_version
-      run: echo ::set-output name=VERSION::$(echo $GITHUB_REF | cut -d / -f 3)
-
-    - name: Set up JDK 1.11
-      uses: actions/setup-java@v1
+    - name: Set up GraalVM
+      uses: findepi/graalvm@master
       with:
-        java-version: 1.11
-
+        graalvm-version: "20.3.0-java11"
     - uses: actions/cache@v1
       with:
         path: ~/.m2/repository
         key: ${{ runner.os }}-maven-${{ hashFiles('./circle-matcher/pom.xml') }}
         restore-keys: |
           ${{ runner.os }}-maven-
-          
+
     - name: Build with Maven
       working-directory: ./circle-matcher
-      run: mvn -B clean install
+      run: mvn -B clean install -Djfr.unsupported.vm=true
 
     - name: Build and push Docker images
       uses: docker/build-push-action@v1.0.1
