rabbit in docker-compose and hermes prodrelease
Signed-off-by: pedroborgeszup <pedro.borges@zup.com.br>

--- a/hermes/docker-compose.yml
+++ b/hermes/docker-compose.yml
@@ -12,6 +12,16 @@ services:
     networks:
       - development
 
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
+    container_name: rabbitmq
+    environment:
+        RABBITMQ_DEFAULT_USER: rabbitmq
+        RABBITMQ_DEFAULT_PASS: hermes
+    ports:
+        - 5672:5672
+        - 15672:15672
+
 networks:
   development:
     driver: bridge
