--- a/.github/workflows/charlescd-prodrelease.yml
+++ b/.github/workflows/charlescd-prodrelease.yml
@@ -279,9 +279,10 @@ jobs:
         key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
         restore-keys: |
           ${{ runner.os }}-go-
+
     - uses: actions/setup-go@v2
       with:
-        go-version: '^1.14.2'
+        go-version: '1.15'
 
     - name: Build and push Docker images
       uses: docker/build-push-action@v1.0.1
