--- a/.github/workflows/hermes-devrelease.yml
+++ b/.github/workflows/hermes-devrelease.yml
@@ -20,7 +20,7 @@ jobs:
 
       - uses: actions/setup-go@v2
         with:
-          go-version: "^1.14.2"
+          go-version: "1.15"
 
       - name: Get the version
         id: get_version
