--- a/.github/workflows/charlescd-prodrelease.yml
+++ b/.github/workflows/charlescd-prodrelease.yml
@@ -53,9 +53,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set up GraalVM
-        uses: findepi/graalvm
+        uses: findepi/graalvm@java11
         with:
-          graalvm-version: "20.3.0-java11"
+          graalvm-version: "20.3.0.java11"
       - uses: actions/cache@v1
         with:
           path: ~/.m2/repository
