Fixing all CM workflows.
Signed-off-by: Mônica Ribeiro <monicarib1@gmail.com>

--- a/.github/workflows/charlescd-prerelease.yml
+++ b/.github/workflows/charlescd-prerelease.yml
@@ -53,9 +53,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set up GraalVM
-        uses: findepi/graalvm@master
+        uses: docker://findepi/graalvm:20.3.0-java11
         with:
-          graalvm-version: "20.3.0-java11"
+          graalvm-version: "20.3.0.java11"
       - uses: actions/cache@v1
         with:
           path: ~/.m2/repository
