--- a/.github/workflows/charlescd-prodrelease.yml
+++ b/.github/workflows/charlescd-prodrelease.yml
@@ -53,7 +53,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set up GraalVM
-        uses: docker/findepi/graalvm@20.3.0-java11
+        uses: docker://findepi/graalvm:20.3.0-java11
         with:
           graalvm-version: "20.3.0.java11"
       - uses: actions/cache@v1
