--- a/.github/workflows/circle-matcher-devrelease.yml
+++ b/.github/workflows/circle-matcher-devrelease.yml
@@ -8,11 +8,11 @@ jobs:
   build_and_push_prerelease:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up GraalVM
-      uses: findepi/graalvm@master
-      with:
-        graalvm-version: "20.3.0-java11"
+      - uses: actions/checkout@v2
+      - name: Set up GraalVM
+        uses: docker://findepi/graalvm:20.3.0-java11
+        with:
+          graalvm-version: "20.3.0.java11"
     - uses: actions/cache@v1
       with:
         path: ~/.m2/repository
