.env is a joking name for commits
Signed-off-by: Gabriel Leite <gabriel.leite@zup.com.br>

--- a/hermes/.env
+++ b/hermes/.env
@@ -5,3 +5,6 @@ DB_NAME=charlescd_hermes
 DB_SSL=disable
 DB_PORT=5432
 ENCRYPTION_KEY=Yjg0NDVkMDUtMzliOC00YTkxLWEwOWMtZDRhN2VkOGRlZmRj
+AMQP_URL=amqp://guest:guest@localhost:5672/
+AMQP_LISTEN_QUEUE=fila1
+AMQP_PUSH_QUEUE=fila1
