Setting a variable to save the version name.

--- a/.github/workflows/charlescd-prerelease.yml
+++ b/.github/workflows/charlescd-prerelease.yml
@@ -51,6 +51,10 @@ jobs:
   build_and_push_release_circle_matcher:
     runs-on: ubuntu-latest
     steps:
+      - name: Get the version
+        id: get_version
+        run: echo ::set-output name=VERSION::$(echo $GITHUB_REF | cut -d / -f 3)
+
       - uses: actions/checkout@v2
       - name: Set up GraalVM
         uses: DeLaGuardo/setup-graalvm@master
