--- a/install/helm-chart/templates/cluster-role-binding.yaml
+++ b/install/helm-chart/templates/cluster-role-binding.yaml
@@ -2,11 +2,11 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   annotations:
-  name: charlescd-octopipe-role-binding
+  name: charlescd-octopipe-role-binding-{{ .Release.Namespace }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: charlescd-octopipe-role
+  name: charlescd-octopipe-role-{{ .Release.Namespace }}
 subjects:
 - kind: ServiceAccount
   name: charlescd-octopipe
