--- a/hermes/docker-compose.yml
+++ b/hermes/docker-compose.yml
@@ -16,8 +16,8 @@ services:
     image: rabbitmq:3-management-alpine
     container_name: rabbitmq
     environment:
-        RABBITMQ_DEFAULT_USER: rabbitmq
-        RABBITMQ_DEFAULT_PASS: hermes
+        RABBITMQ_DEFAULT_USER: guest
+        RABBITMQ_DEFAULT_PASS: guest
     ports:
         - 5672:5672
         - 15672:15672
