--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -20,7 +20,7 @@
     "strictNullChecks": false,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react"
   },
   "include": [
     "src"
