--- a/hermes/.env
+++ b/hermes/.env
@@ -6,3 +6,5 @@ DB_SSL=disable
 DB_PORT=5432
 ENCRYPTION_KEY=Yjg0NDVkMDUtMzliOC00YTkxLWEwOWMtZDRhN2VkOGRlZmRj
 AMQP_URL=amqp://guest:guest@localhost:5672/,
+PUBLISHER_TIME=15s
+PUBLISHER_RETRY=2
