--- a/moove/web/src/main/resources/application-local.properties
+++ b/moove/web/src/main/resources/application-local.properties
@@ -22,8 +22,8 @@ charlescd.keycloak.serverUrl=https://charlescd-moove.com/auth
 charlescd.keycloak.public.clientId=charlescd-public
 charlescd.keycloak.clientId=charlescd
 charlescd.keycloak.clientSecret=your-secret-key
-charles.internal.idm.enabled=true
+charles.internal.idm.enabled=false
 
-charlescd.ratelimit.capacity=1
-charlescd.ratelimit.tokens=1
-charlescd.ratelimit.seconds=1
+charlescd.ratelimit.capacity=100
+charlescd.ratelimit.tokens=100
+charlescd.ratelimit.seconds=100
