--- a/.github/workflows/hermes-ci.yml
+++ b/.github/workflows/hermes-ci.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Run Unit tests
         working-directory: ./hermes
         run: |
-          go test -v -coverpkg ./internal/* -coverprofile=coverage.cov
+          go test ./internal/... -v -coverpkg ./internal/... -coverprofile=coverage.cov
 
       - name: Tests coverage
         uses: codecov/codecov-action@v1.0.13
