Add origin host to handler api
Signed-off-by: Maycon Pacheco <mayconjrpacheco@gmail.com>

--- a/compass/.env
+++ b/compass/.env
@@ -8,3 +8,4 @@ ENV=PROD
 PLUGINS_DIR=./dist
 TIMEOUT=10
 ENCRYPTION_KEY=caf5a807-5edd-4580-9149-7a4882755716
+ORIGIN_HOSTS=http://localhost:3000,http://localhost:3001,http://localhost:8081,http://localhost:8080,https://charles-sandbox.continuousplatform.com,https://devcraft-dev.continuousplatform.com
