--- a/.github/workflows/charlescd-ci.yml
+++ b/.github/workflows/charlescd-ci.yml
@@ -337,6 +337,10 @@ jobs:
              build_and_push_alpha_compass
     ]
     steps:
+      - name: Get the version
+        id: get_version
+        run: echo ::set-output name=VERSION::$(echo $GITHUB_SHA)
+        
       - name: ping
         run: |
-          curl -X POST -H "Content-Type: Application/json" -d '{"text":"New alpha images builded with tag: $GITHUB_SHA"}' ${{ secrets.GCHAT_SRE_WEBHOOK }}
+          curl -X POST -H "Content-Type: Application/json" -d '{"text":"New alpha images builded with tag: ${{ steps.get_version.outputs.VERSION }}"}' ${{ secrets.GCHAT_SRE_WEBHOOK }}
