--- a/.github/workflows/charlescd-prerelease.yml
+++ b/.github/workflows/charlescd-prerelease.yml
@@ -175,7 +175,7 @@ jobs:
 
       - run: yarn install
         working-directory: ./ui
-      - run: yarn build:all
+      - run: yarn build
         working-directory: ./ui
         env:
           CI: true
