--- a/.github/workflows/charlescd-ci.yml
+++ b/.github/workflows/charlescd-ci.yml
@@ -248,7 +248,7 @@ jobs:
 
     - run: yarn install
       working-directory: ./ui
-    - run: yarn build:all
+    - run: yarn build
       working-directory: ./ui
     - run: yarn test
       working-directory: ./ui
