--- a/.github/workflows/ui-ci.yml
+++ b/.github/workflows/ui-ci.yml
@@ -30,7 +30,7 @@ jobs:
         node-version: 12.x
     - run: yarn install
       working-directory: ./ui
-    - run: yarn build:all
+    - run: yarn build
       working-directory: ./ui
     - run: yarn test:coverage
       working-directory: ./ui
