using installation namespace
Signed-off-by: Lucas Borges Fernandes <lucasbfernandes94@gmail.com>

--- a/install/helm-chart/templates/charlescd-butler-deployment.yaml
+++ b/install/helm-chart/templates/charlescd-butler-deployment.yaml
@@ -82,6 +82,8 @@ spec:
                 secretKeyRef:
                   name: deploy-aes256-key
                   key: encryption-key
+            - name: BUTLER_NAMESPACE
+              value: {{ .Release.Namespace }}
           resources:
 {{ toYaml .Values.butler.resources | indent 12 }}
     {{- with .Values.butler.nodeSelector }}
