--- a/install/helm-chart/values.yaml
+++ b/install/helm-chart/values.yaml
@@ -11,8 +11,8 @@ butler:
     ssl: false
   replicaCount: 1
   image:
-    name: zupcharles/charlescd-butler:0.5.1
-    pullPolicy: Always
+    name: charlescd-butler:1.0 # zupcharles/charlescd-butler:0.5.1
+    pullPolicy: IfNotPresent
   service:
     name: charlescd-butler
     type: ClusterIP
@@ -28,7 +28,7 @@ butler:
       memory: 128Mi
 
 moove:
-  enabled: true
+  enabled: false
   name: "charlescd-moove"
   allowedOriginHost: "http://charles.info.example"
   keycloakHost: "http://charlescd-keycloak-http/keycloak/auth"
@@ -61,7 +61,7 @@ sidecarIstio:
   enabled: true
 
 villager:
-  enabled: true
+  enabled: false
   name: "charlescd-villager"
   database:
     name: charlescd_villager
@@ -89,7 +89,7 @@ villager:
       memory: 128Mi
 
 ui:
-  enabled: true
+  enabled: false
   name: charlescd-ui
   apiHost: http://charles.info.example
   authUri: http://charles.info.example/keycloak
@@ -117,7 +117,7 @@ ui:
       memory: 64Mi
 
 circlematcher:
-  enabled: true
+  enabled: false
   name: charlescd-circle-matcher
   redis:
     host: charlescd-redis-master
@@ -144,7 +144,7 @@ circlematcher:
       memory: 128Mi
 
 keycloak:
-  enabled: true
+  enabled: false
   keycloak:
     extraEnv: |
       - name: PROXY_ADDRESS_FORWARDING
@@ -178,11 +178,11 @@ postgresql:
   postgresqlPassword: "firstpassword"
 
 redis:
-  enabled: true
+  enabled: false
   password: "hb2Fj9MGKjBkZ6zV"
 
 envoy:
-  enabled: true
+  enabled: false
   ui:
     enabled: true
   moove:
@@ -207,10 +207,10 @@ envoy:
 ingress:
   host: charles.info.example
   class: nginx
-  enabled: true
+  enabled: false
 
 nginx_ingress_controller:
-  enabled: true
+  enabled: false
 
 ingress-nginx:
   controller:
@@ -220,7 +220,7 @@ ingress-nginx:
 ##      default-ssl-certificate: "namespace/secret"
 
 octopipe:
-  enabled: true
+  enabled: false
   envVars:
     - name: APP_PORT
       value: "8080"
@@ -232,7 +232,7 @@ octopipe:
       value: "10"
 
 compass:
-  enabled: true
+  enabled: false
   name: "charlescd-compass"
   database:
     name: charlescd_compass
