--- a/hermes/.env
+++ b/hermes/.env
@@ -6,8 +6,9 @@ DB_SSL=disable
 DB_PORT=5432
 ENCRYPTION_KEY=Yjg0NDVkMDUtMzliOC00YTkxLWEwOWMtZDRhN2VkOGRlZmRj
 AMQP_URL=amqp://guest:guest@localhost:5672/
-AMQP_LISTEN_QUEUE=queue1
-AMQP_PUSH_QUEUE=queue1
+AMQP_MESSAGE_QUEUE=queue-message
+AMQP_DELIVERED_FAIL_QUEUE=queue-fail
 PUBLISHER_TIME=15s
 PUBLISHER_RETRY=2
-SUBSCRIPTION_REGISTER_LIMIT=5
+DELIVERED_FAIL_RETRY=2
+SUBSCRIPTION_REGISTER_LIMIT=100
