--- a/moove/infrastructure/src/main/resources/db/changelog/includes/20210217143900_add_metadata_to_deployments_table.yaml
+++ b/moove/infrastructure/src/main/resources/db/changelog/includes/20210217143900_add_metadata_to_deployments_table.yaml
@@ -8,6 +8,6 @@ databaseChangeLog:
             tableName: deployments
             column:
               name: metadata
-              type: jsonb
+              type: JSONB
               constraints:
                 nullable: true
