Adding migrations to create system token table and permissions relationship table as well
Signed-off-by: Mateus Cruz <emiteze@hotmail.com>

--- a/gate/hack/docker-compose.yaml
+++ b/gate/hack/docker-compose.yaml
@@ -7,9 +7,9 @@ services:
     ports:
       - 5432:5432
     environment:
-      - POSTGRES_DB=gate
-      - POSTGRES_USER=gate
-      - POSTGRES_PASSWORD=gate
+      - POSTGRES_DB=charles
+      - POSTGRES_USER=charles
+      - POSTGRES_PASSWORD=charles
       - MAX_CONNECTIONS=300
     networks:
       - development
