--- a/gate/resources/.env
+++ b/gate/resources/.env
@@ -1,8 +1,8 @@
-DB_USER=gate
-DB_PASSWORD=gate
+DB_USER=charles
+DB_PASSWORD=charles
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=gate
+DB_NAME=charles
 DB_SSL=disable
 ENV=DEV
 QUERIES_PATH=./internal/repository/queries
