--- a/.github/workflows/moove-ci.yaml
+++ b/.github/workflows/moove-ci.yaml
@@ -18,6 +18,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: "0"
     - name: Set up JDK 1.11
       uses: actions/setup-java@v1
       with:
