--- a/hermes/.env
+++ b/hermes/.env
@@ -1,7 +1,7 @@
-DB_USER=charles
-DB_PASSWORD=charles
+DB_USER=charlescd_hermes
+DB_PASSWORD=charlescd_hermes
 DB_HOST=localhost
-DB_NAME=charles
+DB_NAME=charlescd_hermes
 DB_SSL=disable
 DB_PORT=5432
 ENCRYPTION_KEY=Yjg0NDVkMDUtMzliOC00YTkxLWEwOWMtZDRhN2VkOGRlZmRj
