specify helm version on dockerfile
Signed-off-by: Cassio Godinho <cassiopgodinho@gmail.com>

--- a/butler/Dockerfile
+++ b/butler/Dockerfile
@@ -6,7 +6,9 @@ RUN apk upgrade --update-cache --available && \
     apk add openssl && \
     rm -rf /var/cache/apk/*
 
-RUN wget -q -O - https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | /bin/sh
+ARG HELM_VERSION=v3.5.1
+
+RUN wget -q -O - https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | /bin/sh -s -- --version $HELM_VERSION
 
 RUN helm version
 
