Removing mem param from dockerfile.
Signed-off-by: Mônica Ribeiro <monicarib1@gmail.com>

--- a/circle-matcher/Dockerfile
+++ b/circle-matcher/Dockerfile
@@ -5,5 +5,5 @@ ENV APP charlescd-circle-matcher.jar
 RUN mkdir -p /opt
 COPY ${APP_TARGET}/${APP} /opt
 
-ENTRYPOINT MEM_PARAMS=$(/param_tuning.sh ${HEAP_SIZE:-512}); exec java ${JAVA_AGENT} ${JAVA_OPTS} ${MEM_PARAMS} -XX:-UseJVMCINativeLibrary -jar /opt/${APP}
+ENTRYPOINT exec java ${JAVA_AGENT} ${JAVA_OPTS} ${MEM_PARAMS} -XX:-UseJVMCINativeLibrary -jar /opt/${APP}
 
