adding DELETE user groups from workspace permission to maintainer
Signed-off-by: pedroborgeszup <pedro.borges@zup.com.br>

--- a/moove/web/src/main/resources/security-constraints.yml
+++ b/moove/web/src/main/resources/security-constraints.yml
@@ -180,6 +180,12 @@ constraints:
         - POST
         - PATCH
 
+  - pattern: /v2/workspaces/{workspaceId}/groups/**
+    roles:
+      maintenance_write:
+        - POST
+        - DELETE
+
   - pattern: /v2/configurations/metric-configurations/provider-status
     roles:
       maintenance_write:
