--- a/.github/workflows/butler-ci.yml
+++ b/.github/workflows/butler-ci.yml
@@ -45,9 +45,9 @@ jobs:
       working-directory: ./butler
     - run: npm run lint
       working-directory: ./butler
-    - run: docker-compose up -d
+    - run: docker-compose up -d --build
       working-directory: ./butler
-    - run: docker-compose exec -T app npm ci && npm run test:all:cov
+    - run: docker-compose -f docker-compose-ci.yml exec -T -- app sh -c "npm run test:all:cov"
       working-directory: ./butler
     - uses: codecov/codecov-action@v1
       with:
